# probcolli

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml  requirements.txt
probcolli/: __init__.py
probcolli/entities/: __init__.py
probcolli/features/cbnn/: __init__.py  cbnn.py
probcolli/features/cbnn/entities/: __init__.py  cbnn_info.py
probcolli/features/cgp/: cgp.py
probcolli/features/cgp/use_cases/: gp_model.py  pg_likelihood.py
tests/: cbnn_test.py  cgp_test.py
tests/data/: end_effector.csv  labels.csv  x.csv  y.csv
